tests/snapshots/raptorq_encoded_block_golden__encode_boundary_exact.snap
---
source: tests/raptorq_encoded_block_golden.rs
assertion_line: 219
expression: golden_exact
---
{
  "description": "Exactly one symbol size with 50% repair overhead",
  "input_bytes": [
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85
  ],
  "config": {
    "symbol_size": 64,
    "max_block_size": 8192,
    "repair_overhead": 1.5,
    "encoding_parallelism": 1,
    "decoding_parallelism": 1,
    "deterministic_seed": 789
  },
  "symbols": [
    {
      "object_id": 15592092227478290196937449675359,
      "source_block_number": 0,
      "encoding_symbol_id": 0,
      "kind": "Source",
      "payload_bytes": [
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85
      ],
      "size": 64
    },
    {
      "object_id": 15592092227478290196937449675359,
      "source_block_number": 0,
      "encoding_symbol_id": 1,
      "kind": "Repair",
      "payload_bytes": [
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85
      ],
      "size": 64
    }
  ],
  "stats": {
    "source_symbols": 1,
    "repair_symbols": 1,
    "total_symbols": 2
  }
}
