tests/snapshots/raptorq_encoded_block_golden__encode_boundary_over.snap
---
source: tests/raptorq_encoded_block_golden.rs
assertion_line: 230
expression: golden_over
---
{
  "description": "One byte over symbol size with 50% repair overhead",
  "input_bytes": [
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85,
    85
  ],
  "config": {
    "symbol_size": 64,
    "max_block_size": 8192,
    "repair_overhead": 1.5,
    "encoding_parallelism": 1,
    "decoding_parallelism": 1,
    "deterministic_seed": 790
  },
  "symbols": [
    {
      "object_id": 15532822978025085413027480675997,
      "source_block_number": 0,
      "encoding_symbol_id": 0,
      "kind": "Source",
      "payload_bytes": [
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85
      ],
      "size": 64
    },
    {
      "object_id": 15532822978025085413027480675997,
      "source_block_number": 0,
      "encoding_symbol_id": 1,
      "kind": "Source",
      "payload_bytes": [
        85,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0
      ],
      "size": 64
    },
    {
      "object_id": 15532822978025085413027480675997,
      "source_block_number": 0,
      "encoding_symbol_id": 2,
      "kind": "Repair",
      "payload_bytes": [
        160,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85,
        85
      ],
      "size": 64
    }
  ],
  "stats": {
    "source_symbols": 2,
    "repair_symbols": 1,
    "total_symbols": 3
  }
}
