tests/snapshots/raptorq_encoded_block_golden__encode_systematic.snap
---
source: tests/raptorq_encoded_block_golden.rs
assertion_line: 309
expression: golden
---
{
  "description": "Systematic encoding with 100% repair overhead",
  "input_bytes": [
    83,
    121,
    115,
    116,
    101,
    109,
    97,
    116,
    105,
    99,
    32,
    101,
    110,
    99,
    111,
    100,
    105,
    110,
    103,
    32,
    116,
    101,
    115,
    116,
    32,
    45,
    32,
    115,
    111,
    117,
    114,
    99,
    101,
    32,
    115,
    121,
    109,
    98,
    111,
    108,
    115,
    32,
    115,
    104,
    111,
    117,
    108,
    100,
    32,
    98,
    101,
    32,
    112,
    114,
    101,
    115,
    101,
    114,
    118,
    101,
    100
  ],
  "config": {
    "symbol_size": 32,
    "max_block_size": 8192,
    "repair_overhead": 2.0,
    "encoding_parallelism": 1,
    "decoding_parallelism": 1,
    "deterministic_seed": 1337
  },
  "symbols": [
    {
      "object_id": 26370057625515042924154689050469,
      "source_block_number": 0,
      "encoding_symbol_id": 0,
      "kind": "Source",
      "payload_bytes": [
        83,
        121,
        115,
        116,
        101,
        109,
        97,
        116,
        105,
        99,
        32,
        101,
        110,
        99,
        111,
        100,
        105,
        110,
        103,
        32,
        116,
        101,
        115,
        116,
        32,
        45,
        32,
        115,
        111,
        117,
        114,
        99
      ],
      "size": 32
    },
    {
      "object_id": 26370057625515042924154689050469,
      "source_block_number": 0,
      "encoding_symbol_id": 1,
      "kind": "Source",
      "payload_bytes": [
        101,
        32,
        115,
        121,
        109,
        98,
        111,
        108,
        115,
        32,
        115,
        104,
        111,
        117,
        108,
        100,
        32,
        98,
        101,
        32,
        112,
        114,
        101,
        115,
        101,
        114,
        118,
        101,
        100,
        0,
        0,
        0
      ],
      "size": 32
    },
    {
      "object_id": 26370057625515042924154689050469,
      "source_block_number": 0,
      "encoding_symbol_id": 2,
      "kind": "Repair",
      "payload_bytes": [
        193,
        200,
        95,
        224,
        156,
        112,
        75,
        106,
        69,
        210,
        12,
        192,
        68,
        39,
        113,
        17,
        216,
        115,
        245,
        145,
        108,
        174,
        225,
        88,
        178,
        230,
        80,
        225,
        26,
        117,
        114,
        99
      ],
      "size": 32
    },
    {
      "object_id": 26370057625515042924154689050469,
      "source_block_number": 0,
      "encoding_symbol_id": 3,
      "kind": "Repair",
      "payload_bytes": [
        248,
        52,
        86,
        96,
        63,
        207,
        196,
        202,
        187,
        217,
        125,
        134,
        187,
        63,
        234,
        1,
        120,
        133,
        63,
        190,
        147,
        250,
        96,
        15,
        75,
        241,
        196,
        96,
        109,
        39,
        126,
        255
      ],
      "size": 32
    }
  ],
  "stats": {
    "source_symbols": 2,
    "repair_symbols": 2,
    "total_symbols": 4
  }
}
